# text_algorithms

./: .gitignore  README.md  pyproject.toml
lab1/: analyze_text_file.py  build_dfa.py  ex1.py  ex2.py
lab1/tests/: test_analyze_text_file.py  test_extract_links.py
lab2/: build_dfa.py  extract_links.py
lab2/lab_2/: boyer_moore_algorithm.py  kmp_algorithm.py  naive_pattern_matching.py  rabin_karp_algorithm.py  z_algorithm.py
lab2/tests/: test_analyze_text_file.py  test_build_dfa.py  test_extract_links.py  test_parse_publication.py
lab3/: kmp_algorithm.py  naive_pattern_matching.py  z_algorithm.py
lab3/lab_3/: aho_corasick_algorithm.py  fuzzy_matching.py  shift_or_algorithm.py  two_dimensional_search.py
lab3/tests/: test_boyer_moore_algorithm.py  test_kmp_algorithm.py  test_naive_pattern_matching.py  test_rabin_karp.py  test_z_algorithm.py
lab4/: cmp_pattern_matching_algorithms.ipynb  common_substring.py  fuzzy_matching.py  levenshtein_distance.py  pattern_finiding_algorithms_cmp.py  shift_or_algorithm.py  suffix_array.py  suffix_structures_cmp.py  text_generator.py  two_dimensional_search.py  ukkonen_algorithm.py  wiktor_sedzimir_lab4.ipynb
lab4/benchmark/: aho_corasick_algorithm.py  boyer_moore_algorithm.py  kmp_algorithm.py  naive_pattern_matching.py  rabin_karp_algorithm.py  suffix_array.py  ukkonen_algorithm.py
lab5/: common_substring.py  lcs_suff_arr.py  pattern_finiding_algorithms_cmp.py  suffix_array.py  suffix_structures_cmp.py
lab6/: naive_edit_distance.py  wagner_fischer.py
lab_1/: analyze_text_file.py  extract_links.py  parse_publication.py
(+28 files in other folders)
