[project]
name = "text-algorithms"
version = "0.1.0"
description = "Text Algorithms course"
authors = [
    {name = "Wiktor Sędzimir",email = "wiktor.sedzimir@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
