[project]
name = "text-algorithms"
version = "0.1.0"
description = "Text Algorithms course"
authors = [
    {name = "Wiktor Sędzimir",email = "wiktor.sedzimir@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "iniconfig (==2.0.0)",
    "packaging (==24.2)",
    "pluggy (==1.5.0)",
    "pytest (==8.3.5)",
    "overrides (>=7.7.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
